# fulu

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
fulu/: __init__.py  _base_aug.py  bnn_aug.py  gp_aug.py  mlp_reg_aug.py  nf_aug.py  plotting.py  single_layer_aug.py
lc_approx/: _base_aug.py  bnn_aug.py  gp_aug.py  mlp_reg_aug.py  nf_aug.py  single_layer_aug.py
notebook_examples/: Test_of_plotting_new.ipynb  aug_standart_ztf.py  object_34299.csv  plotting.ipynb
notebook_examples/.ipynb_checkpoints/: plotting-checkpoint.ipynb
tests/: test_aug.py
