[metadata]
name = fulu
version = 0.1.0
author = Mikhail Hushchyn
author_email =
description = Light curve approximation and augmentation
long_description = file: README.md
long_description_content_type = text/markdown
url =
license = MIT
keywords = science, astrophysics
classifiers =
        Intended Audience :: Science/Research
        License :: OSI Approved :: MIT License
        Topic :: Scientific/Engineering :: Astronomy
        Programming Language :: Python :: 3
        # See full list on https://pypi.org/classifiers/

[options]
packages = find:
include_package_data = True
install_requires =
        numpy
        pandas>=1.0
        scikit-learn
        torch>=1.0,<2.0
        torchbnn>=1.0
